# pathMinCurve

./: .gitignore  CMakeLists.txt  README.md  curvature_minimizer.cpp  main.cpp  main.py  minCurvOpti.cpp  minCurvOpti.py  plotResults.py  requirements.txt  test.csv  test2.csv
include/: curvature_minimizer.hpp  get_path.hpp  point.hpp  save_theta_to_file.hpp
pythonUtilities/: costFunction.py  distanceCalc.py  importMap.py  importTheta.py
tracks/: track1.csv  track2.csv
